--- a/bib.bib
+++ b/bib.bib
@@ -1,3 +1,49 @@
+@article{Gazit198861,
+title = "An improved parallel algorithm that computes the \{BFS\} numbering of a directed graph ",
+journal = "Information Processing Letters ",
+volume = "28",
+number = "2",
+pages = "61 - 65",
+year = "1988",
+note = "",
+issn = "0020-0190",
+doi = "http://dx.doi.org/10.1016/0020-0190(88)90164-0",
+url = "http://www.sciencedirect.com/science/article/pii/0020019088901640",
+author = "Hillel Gazit and Gary L. Miller",
+keywords = "Single source",
+keywords = "breadth-first search",
+keywords = "fast matrix multiplication",
+keywords = "parallel algorithm "
+}
+
+@book{citeulike:10648615,
+    author = {Kepner, Jeremy V. and Gilbert, J. R.},
+    citeulike-article-id = {10648615},
+    citeulike-linkout-0 = {http://www.worldcat.org/isbn/9780898719901},
+    citeulike-linkout-1 = {http://books.google.com/books?vid=ISBN9780898719901},
+    citeulike-linkout-2 = {http://www.amazon.com/gp/search?keywords=9780898719901\&index=books\&linkCode=qs},
+    citeulike-linkout-3 = {http://www.librarything.com/isbn/9780898719901},
+    citeulike-linkout-4 = {http://www.worldcat.org/oclc/704556857},
+    isbn = {9780898719901},
+    keywords = {book, graph\_theory, graphical\_model, linear\_algebra},
+    posted-at = {2012-05-07 08:08:28},
+    priority = {2},
+    publisher = {Society for Industrial and Applied Mathematics},
+    title = {{Graph algorithms in the language of linear algebra}},
+    url = {http://www.worldcat.org/isbn/9780898719901},
+    year = {2011}
+}
+
+@incollection{sparsechapter,
+  author = {Ayd{\i}n Bulu\c{c} and John R. Gilbert and Viral B. Shah},
+  title = {{Implementing Sparse Matrices for Graph Algorithms}},
+  editor = {Jeremy Kepner and John R. Gilbert},
+  year = {2011},
+  booktitle = { Graph Algorithms in the Language of Linear Algebra },
+  publisher = { SIAM Press}
+}
+
+
 @article{DBLP:journals/corr/abs-1212-1121,
   author    = {Isabelle Stanton},
   title     = {Streaming Balanced Graph Partitioning for Random Graphs},
