--- a/bib.bib
+++ b/bib.bib
@@ -16,6 +16,43 @@ keywords = "fast matrix multiplication",
 keywords = "parallel algorithm "
 }
 
+@inproceedings{Yuan:2012:MLG:2410141.2410574,
+ author = {Yuan, Liang and Ding, Chen and \AA tefankovic, Daniel and Zhang, Yunquan},
+ title = {Modeling the Locality in Graph Traversals},
+ booktitle = {Proceedings of the 2012 41st International Conference on Parallel Processing},
+ series = {ICPP '12},
+ year = {2012},
+ isbn = {978-0-7695-4796-1},
+ pages = {138--147},
+ numpages = {10},
+ url = {http://dx.doi.org/10.1109/ICPP.2012.40},
+ doi = {10.1109/ICPP.2012.40},
+ acmid = {2410574},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {locality, graph traversals, vertex distance, reuse distance},
+} 
+
+
+@article{journals/cj/GanleyH94,
+  added-at = {2011-06-28T00:00:00.000+0200},
+  author = {Ganley, Joseph L. and Heath, Lenwood S.},
+  biburl = {http://www.bibsonomy.org/bibtex/20844c3095456f4e241b97a0334543cc3/dblp},
+  ee = {http://dx.doi.org/10.1093/comjnl/37.7.641},
+  interhash = {c7cb1dc10eda5ad89854a7f560c3baad},
+  intrahash = {0844c3095456f4e241b97a0334543cc3},
+  journal = {Comput. J.},
+  keywords = {dblp},
+  number = 7,
+  pages = {641-643},
+  timestamp = {2011-06-28T00:00:00.000+0200},
+  title = {Optimal and Random Partitions of Random Graphs.},
+  url = {http://dblp.uni-trier.de/db/journals/cj/cj37.html#GanleyH94},
+  volume = 37,
+  year = 1994
+}
+
+
 @book{citeulike:10648615,
     author = {Kepner, Jeremy V. and Gilbert, J. R.},
     citeulike-article-id = {10648615},
