--- a/notes.tex
+++ b/notes.tex
@@ -55,6 +55,18 @@
 \maketitle
 \tableofcontents
 
+\section{Locality Models for Breadth First Traversal on Graphs}
+This paper sucks: \cite{Yuan:2012:MLG:2410141.2410574}
+
+\subsection{Random Graph Models}
+\subsubsection{Erdos-Renyi}
+\subsubsection{Power-Law}
+
+\section{Experimental Exploration}
+Do SpMV tests with E-R graphs as $t \to \infty$
+
+Do SpMV tests with Kronecker graphs as seed values $\to 1$
+
 \section{How important is balance? (vs. edge cut)}
 Inspiration: ``Myth 3: Partition Quality is Paramount''
 
@@ -76,6 +88,10 @@ BFS communication volume perfectly matches hypergraph cut \cite{Catalyurek_hyper
 Vertices on boundary vs. edge cut -- is there a disparity here?
 
 Minimum-congestion partitioning?
+
+\section{Load Imbalance Models}
+\subsection{Load imbalance of random orderings}
+\cite{journals/cj/GanleyH94}
 
 \section{Random graph model flaws / Gaming the Graph500}
 Compare degree-sorted real-world network with Kronecker, show differences.
