--- a/locality.tex
+++ b/locality.tex
@@ -69,6 +69,13 @@ When a row is loaded from memory, its nonzeros are stored in cache according to 
 
 Now consider the traversal step $i+1$: based on the particular cache policy, we can imagine a recurrence relation that describes $p_{i+1}=f(p_i; A, x_i)$
 
+\subsection{Notes}
+\begin{enumerate}
+\item What does the spectrum tell us about the growth of $x_i$?
+\item What does the degree distribution tell us (gen function methodology)?
+\item Kronecker - PL mapping
+\end{enumerate}
+
 
 
 
