--- a/bib.bib
+++ b/bib.bib
@@ -16,6 +16,29 @@ keywords = "fast matrix multiplication",
 keywords = "parallel algorithm "
 }
 
+@MISC{Xia_topologicallyadaptive,
+    author = {Yinglong Xia and Viktor K. Prasanna},
+    title = {TOPOLOGICALLY ADAPTIVE PARALLEL BREADTH-FIRST SEARCH ON MULTICORE PROCESSORS},
+    year = {}
+}
+
+@inproceedings{Dan:1990:AAL:98457.98525,
+ author = {Dan, Asit and Towsley, Don},
+ title = {An approximate analysis of the LRU and FIFO buffer replacement schemes},
+ booktitle = {Proceedings of the 1990 ACM SIGMETRICS conference on Measurement and modeling of computer systems},
+ series = {SIGMETRICS '90},
+ year = {1990},
+ isbn = {0-89791-359-0},
+ location = {Univ. of Colorado, Boulder, Colorado, USA},
+ pages = {143--152},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/98457.98525},
+ doi = {10.1145/98457.98525},
+ acmid = {98525},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
 @inproceedings{Yuan:2012:MLG:2410141.2410574,
  author = {Yuan, Liang and Ding, Chen and \AA tefankovic, Daniel and Zhang, Yunquan},
  title = {Modeling the Locality in Graph Traversals},
