--- a/bib.bib
+++ b/bib.bib
@@ -1,3 +1,26 @@
+@inproceedings{Beamer:2012:DBS:2388996.2389013,
+ author = {Beamer, Scott and Asanovi\'{c}, Krste and Patterson, David},
+ title = {Direction-optimizing breadth-first search},
+ booktitle = {Proceedings of the International Conference on High Performance Computing, Networking, Storage and Analysis},
+ series = {SC '12},
+ year = {2012},
+ isbn = {978-1-4673-0804-5},
+ location = {Salt Lake City, Utah},
+ pages = {12:1--12:10},
+ articleno = {12},
+ numpages = {10},
+ url = {http://dl.acm.org/citation.cfm?id=2388996.2389013},
+ acmid = {2389013},
+ publisher = {IEEE Computer Society Press},
+ address = {Los Alamitos, CA, USA},
+} 
+
+@MISC{Xia_topologicallyadaptive,
+    author = {Yinglong Xia and Viktor K. Prasanna},
+    title = {TOPOLOGICALLY ADAPTIVE PARALLEL BREADTH-FIRST SEARCH ON MULTICORE PROCESSORS},
+    year = {}
+}
+
 @article{Gazit198861,
 title = "An improved parallel algorithm that computes the \{BFS\} numbering of a directed graph ",
 journal = "Information Processing Letters ",
