--- a/texfiles/bib.bib
+++ b/texfiles/bib.bib
@@ -1,3 +1,152 @@
+@inproceedings{Nishiura13,
+	title = {Restreaming graph partitioning: simple versatile algorithms for advanced balancing},
+	author = {J. Nishiura and Johan Ugander},
+	booktitle = {19th ACM SIGKDD international conference on Knowledge discovery and data mining},
+	pages = {1106--1114},
+	isbn = {978-1-4503-2174-7},
+	year = {2013},
+	note = {http://www.odysci.com/article/1010113019966830},
+	url = {http://portal.acm.org/citation.cfm?id=2487575.2487696},
+	doi = {10.1145/2487575.2487696},
+}
+
+@misc{Leskovec-data,
+    abstract = {{Social media and technological datasets.}},
+    author = {Leskovec, Jure},
+    citeulike-article-id = {11123398},
+    citeulike-linkout-0 = {http://snap.stanford.edu/data/},
+    keywords = {data, dataset, datasets, socialnetworks},
+    posted-at = {2012-08-23 19:15:06},
+    priority = {2},
+    title = {{Stanford Large Network Dataset Collection}},
+    url = {http://snap.stanford.edu/data/}
+}
+
+@INPROCEEDINGS{Gilbert95geometricmesh,
+    author = {John R. Gilbert and Gary L. Miller and Shang-Hua Teng},
+    title = {Geometric Mesh Partitioning: Implementation and Experiments},
+    booktitle = {In Proceedings of International Parallel Processing Symposium},
+    year = {1995},
+    pages = {418--427}
+}
+
+
+
+@inproceedings{Abou-Rjeili:2006:MAP:1898953.1899055,
+ author = {Abou-Rjeili, Amine and Karypis, George},
+ title = {Multilevel Algorithms for Partitioning Power-law Graphs},
+ booktitle = {Proceedings of the 20th International Conference on Parallel and Distributed Processing},
+ series = {IPDPS'06},
+ year = {2006},
+ isbn = {1-4244-0054-6},
+ location = {Rhodes Island, Greece},
+ pages = {124--124},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=1898953.1899055},
+ acmid = {1899055},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
+
+@article{journals/cj/GanleyH94,
+  added-at = {2011-06-28T00:00:00.000+0200},
+  author = {Ganley, Joseph L. and Heath, Lenwood S.},
+  biburl = {http://www.bibsonomy.org/bibtex/20844c3095456f4e241b97a0334543cc3/dblp},
+  ee = {http://dx.doi.org/10.1093/comjnl/37.7.641},
+  interhash = {c7cb1dc10eda5ad89854a7f560c3baad},
+  intrahash = {0844c3095456f4e241b97a0334543cc3},
+  journal = {Comput. J.},
+  keywords = {dblp},
+  number = 7,
+  pages = {641-643},
+  timestamp = {2011-06-28T00:00:00.000+0200},
+  title = {Optimal and Random Partitions of Random Graphs.},
+  url = {http://dblp.uni-trier.de/db/journals/cj/cj37.html#GanleyH94},
+  volume = 37,
+  year = 1994
+}
+
+@article{Gazit198861,
+title = "An improved parallel algorithm that computes the \{BFS\} numbering of a directed graph ",
+journal = "Information Processing Letters ",
+volume = "28",
+number = "2",
+pages = "61 - 65",
+year = "1988",
+note = "",
+issn = "0020-0190",
+doi = "http://dx.doi.org/10.1016/0020-0190(88)90164-0",
+url = "http://www.sciencedirect.com/science/article/pii/0020019088901640",
+author = "Hillel Gazit and Gary L. Miller",
+keywords = "Single source",
+keywords = "breadth-first search",
+keywords = "fast matrix multiplication",
+keywords = "parallel algorithm "
+}
+
+@inproceedings{Yuan:2012:MLG:2410141.2410574,
+ author = {Yuan, Liang and Ding, Chen and \AA tefankovic, Daniel and Zhang, Yunquan},
+ title = {Modeling the Locality in Graph Traversals},
+ booktitle = {Proceedings of the 2012 41st International Conference on Parallel Processing},
+ series = {ICPP '12},
+ year = {2012},
+ isbn = {978-0-7695-4796-1},
+ pages = {138--147},
+ numpages = {10},
+ url = {http://dx.doi.org/10.1109/ICPP.2012.40},
+ doi = {10.1109/ICPP.2012.40},
+ acmid = {2410574},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {locality, graph traversals, vertex distance, reuse distance},
+} 
+
+
+@article{journals/cj/GanleyH94,
+  added-at = {2011-06-28T00:00:00.000+0200},
+  author = {Ganley, Joseph L. and Heath, Lenwood S.},
+  biburl = {http://www.bibsonomy.org/bibtex/20844c3095456f4e241b97a0334543cc3/dblp},
+  ee = {http://dx.doi.org/10.1093/comjnl/37.7.641},
+  interhash = {c7cb1dc10eda5ad89854a7f560c3baad},
+  intrahash = {0844c3095456f4e241b97a0334543cc3},
+  journal = {Comput. J.},
+  keywords = {dblp},
+  number = 7,
+  pages = {641-643},
+  timestamp = {2011-06-28T00:00:00.000+0200},
+  title = {Optimal and Random Partitions of Random Graphs.},
+  url = {http://dblp.uni-trier.de/db/journals/cj/cj37.html#GanleyH94},
+  volume = 37,
+  year = 1994
+}
+
+
+@book{citeulike:10648615,
+    author = {Kepner, Jeremy V. and Gilbert, J. R.},
+    citeulike-article-id = {10648615},
+    citeulike-linkout-0 = {http://www.worldcat.org/isbn/9780898719901},
+    citeulike-linkout-1 = {http://books.google.com/books?vid=ISBN9780898719901},
+    citeulike-linkout-2 = {http://www.amazon.com/gp/search?keywords=9780898719901\&index=books\&linkCode=qs},
+    citeulike-linkout-3 = {http://www.librarything.com/isbn/9780898719901},
+    citeulike-linkout-4 = {http://www.worldcat.org/oclc/704556857},
+    isbn = {9780898719901},
+    keywords = {book, graph\_theory, graphical\_model, linear\_algebra},
+    posted-at = {2012-05-07 08:08:28},
+    priority = {2},
+    publisher = {Society for Industrial and Applied Mathematics},
+    title = {{Graph algorithms in the language of linear algebra}},
+    url = {http://www.worldcat.org/isbn/9780898719901},
+    year = {2011}
+}
+
+@TECHREPORT{Lang04findinggood,
+    author = {Kevin Lang},
+    title = {Finding good nearly balanced cuts in power law graphs},
+    institution = {},
+    year = {2004}
+}
+
 @inproceedings{Beamer:2012:DBS:2388996.2389013,
  author = {Beamer, Scott and Asanovi\'{c}, Krste and Patterson, David},
  title = {Direction-optimizing breadth-first search},
@@ -37,12 +186,6 @@ keywords = "Single source",
 keywords = "breadth-first search",
 keywords = "fast matrix multiplication",
 keywords = "parallel algorithm "
-}
-
-@MISC{Xia_topologicallyadaptive,
-    author = {Yinglong Xia and Viktor K. Prasanna},
-    title = {TOPOLOGICALLY ADAPTIVE PARALLEL BREADTH-FIRST SEARCH ON MULTICORE PROCESSORS},
-    year = {}
 }
 
 @inproceedings{Dan:1990:AAL:98457.98525,
